# Smartcontractapp

./: .gitignore  Cargo.toml
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/components/: ClientWalletButton.tsx  MintTokens.tsx  TokenForm.tsx
frontend/src/idl/: spl_token_minter.json
spl_token_minter/: Anchor.toml  README.md  package-lock.json
spl_token_minter/programs/spl_token_minter/: Cargo.toml
spl_token_minter/programs/spl_token_minter/src/: lib.rs
src/: lib.rs
